# InverLoRa

./: .gitignore  CMakeLists.txt
Software Design/: node.drawio
Software_Design/: node.drawio
librerias/: CMakeLists.txt  LoRa.cpp  LoRa.h  battery.cpp  battery.h  puertoAnalogo.cpp  puertoAnalogo.h  sensorTemp.cpp  sensorTemp.h  spi.cpp  spi.h
librerias/Hardware/: spi.cpp  spi.h
src/: InverLoRa.cpp
